[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
isort = "^5.10.1"
feedparser = "6.0.10"
beautifulsoup4 = "4.11.1"
botocore = "1.23.32"
boto3 = "1.20.32"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
